--- a/assignment1.html
+++ b/assignment1.html
@@ -6,14 +6,14 @@
 
 <h1><b>Creative Technologies Program (CTK)</b></h1>
 
-<b>Address:</b> Campus Box 5750
-<b>Phone:</b> (309) 438-2875
-<b>Director:</b> Rose Marshack
-<b>Degrees Offered:</b> B.A., B.S.
+<p><b>Address:</b> Campus Box 5750<br>
+<b>Phone:</b> (309) 438-2875<br>
+<b>Director:</b> Rose Marshack<br>
+<b>Degrees Offered:</b> B.A., B.S.</p>
 
 <h2><b>Major in Creative Technologies</b></h2>
 
-The interdisciplinary Creative Technologies major emphasizes design and practice in the integration of digital technologies and the fine arts. In addition to foundational study across the fine arts, the major provides training and experiences across a range of creative/technical fields including video, sound, electronic music, music production, gaming, motion graphics, interactivity, AR/VR, UI/UX, mobile, web, and computer programming concepts.
+<p>The interdisciplinary Creative Technologies major emphasizes design and practice in the integration of digital technologies and the fine arts. In addition to foundational study across the fine arts, the major provides training and experiences across a range of creative/technical fields including video, sound, electronic music, music production, gaming, motion graphics, interactivity, AR/VR, UI/UX, mobile, web, and computer programming concepts.</p>
 
 <h3><b>Retention Requirements</b></h3>
 <ul> 
@@ -21,19 +21,19 @@ The interdisciplinary Creative Technologies major emphasizes design and practice
 
 <li>Sequence in Game Design - Students will be allowed to continue in this sequence if they meet and continue to maintain an overall cumulative GPA of 2.50 and a cumulative GPA of 3.0 within the major. Additionally, students in the Game Design Sequence must maintain consecutive Fall–Spring enrollment in their final at the University. Any student not enrolled at the university for more than one semester must reapply to the sequence. Students who leave the Sequence in Game Design may continue as a Creative Technologies major in Audio and Music Production or Interdisciplinary Technologies if they have an overall cumulative GPA of 2.00.</li>
 </ul>
-<h3><b>Standards for Progress in the Major</b></h3>
-Students will be allowed to continue in the Creative Technologies program if they met and continue to maintain a cumulative GPA of 2.50 and have demonstrated competency through an intermediate portfolio review.
+<h3>Standards for Progress in the Major</h3>
+<p>Students will be allowed to continue in the Creative Technologies program if they met and continue to maintain a cumulative GPA of 2.50 and have demonstrated competency through an intermediate portfolio review.</p>
 
-<h3><b>Sequences in Creative Technologies</b></h3>
+<h3>Sequences in Creative Technologies</h3>
 
 <h4><b>Audio and Music Production Sequence</b></h4>
-The Audio and Music Production sequence provides concentrated study in sound recording, audio production, sound design, music composition, theory, and business and entrepreneurship practices, along with a host of elective experiences across a range of creative/technical fields including video, sound, electronic music, music production, gaming, motion graphics, interactivity, AR/VR, UI/UX, mobile, web, and computer programming concepts.
+<p>The Audio and Music Production sequence provides concentrated study in sound recording, audio production, sound design, music composition, theory, and business and entrepreneurship practices, along with a host of elective experiences across a range of creative/technical fields including video, sound, electronic music, music production, gaming, motion graphics, interactivity, AR/VR, UI/UX, mobile, web, and computer programming concepts.</p>
 
 <h4><b>Sequence in Game Design</b></h4>
-The Game Design sequence provides concentrated study in game design and production, along with a host of elective experiences across a range of creative/technical fields including video, electronic music, music production, motion graphics, interactivity, AR/VR/XR, UI/UX, mobile, web, and computer programming concepts.
+<p>The Game Design sequence provides concentrated study in game design and production, along with a host of elective experiences across a range of creative/technical fields including video, electronic music, music production, motion graphics, interactivity, AR/VR/XR, UI/UX, mobile, web, and computer programming concepts.</p>
 
 <h4><b>Sequence in Interdisciplinary Technologies</b></h4>
-The Interdisciplinary Technologies sequence provides concentrated study in mobile, web and computer programming concepts, UI/UX, motion graphics, and interactivity along with a host of elective experiences across a range of creative/technical fields including sound, electronic music, music production, AR/VR/XR, and game design.
+<p>The Interdisciplinary Technologies sequence provides concentrated study in mobile, web and computer programming concepts, UI/UX, motion graphics, and interactivity along with a host of elective experiences across a range of creative/technical fields including sound, electronic music, music production, AR/VR/XR, and game design.</p>
 
 <h2><b>Creative Technologies Courses (CTK)</b></h2>
 
@@ -43,51 +43,51 @@ The Interdisciplinary Technologies sequence provides concentrated study in mobil
 Introduction to the history, theories, current trends, practices, and core media in the digital arts.
 
 <h4><b>202 - Foundations: Audio Theory (3)</b></h4>
-This course presents the fundamentals of audio theory as applied to the physics and aesthetics of sound.
+<p>This course presents the fundamentals of audio theory as applied to the physics and aesthetics of sound.</p>
 
 <h4><b>203 - Foundations: Recording and Sampling (3)</b></h4>
-This course covers the aesthetics and technical skills required for the recording and sampling of instruments and the human voice.
+<p>This course covers the aesthetics and technical skills required for the recording and sampling of instruments and the human voice.</p>
 
 <h4><b>204 - Foundations: Music Concepts (3)</b></h4>
-This course covers the study of foundational music concepts, including basic theory, history, genres, and forms.
+<p>This course covers the study of foundational music concepts, including basic theory, history, genres, and forms.</p>
 
 <h4><b>208 - Audio Production I (3)</b></h4>
-This course introduces audio production techniques within a digital audio workstation (DAW) environment.
+<p>This course introduces audio production techniques within a digital audio workstation (DAW) environment.</p>
 
 <h4><b>240 - Sound Design 1: Beginning Digital Audio (3)</b></h4>
-Introduction to digital audio and aesthetic principles of sound.
+<p>Introduction to digital audio and aesthetic principles of sound.</p>
 
 <h4><b>260 - Arts Technology Performance Studio (3)</b></h4>
-Creative and interdisciplinary experiences in solo and ensemble performance integrating computer technology into music, dance, performance art, or theatre production.
+<p>Creative and interdisciplinary experiences in solo and ensemble performance integrating computer technology into music, dance, performance art, or theatre production.</p>
 
 <h3><b>300 Level Classes</b></h3>
 
 <h4><b>301 - Web Design and Development (3)</b></h4>
-Theory, technical skills, and design concepts for the creation of standards-compliant web sites.
+<p>Theory, technical skills, and design concepts for the creation of standards-compliant web sites.</p>
 
 <h4><b>302 - Computer Programming for Creatives (3)</b></h4>
-Text-based, object-oriented, computer programming concepts for areas including interactive design, user interfaces, data visualization, and gaming.
+<p>Text-based, object-oriented, computer programming concepts for areas including interactive design, user interfaces, data visualization, and gaming.</p>
 
 <h4><b>303 - Advanced Web Design and Development (3)</b></h4>
-Advanced programming methods for the creation of dynamically generated web sites and interactive web applications.
+<p>Advanced programming methods for the creation of dynamically generated web sites and interactive web applications.</p>
 
 <h4><b>320 - Programming Dynamic Media (3)</b></h4>
-Programming concepts using a graphical, dataflow environment for media-based performance, interactive installation, and generative art/sound.
+<p>Programming concepts using a graphical, dataflow environment for media-based performance, interactive installation, and generative art/sound.</p>
 
 <h4><b>330 - Web Video (3)</b></h4>
-Students will learn technical skills and concepts for the creation of fictional and documentary video content specifically for delivery on the web.
+<p>Students will learn technical skills and concepts for the creation of fictional and documentary video content specifically for delivery on the web.</p>
 
 <h4><b>340 - Sound Design 2: Advanced Digital Audio (3)</b></h4>
-Advanced digital audio and aesthetic principles of sound.
+<p>Advanced digital audio and aesthetic principles of sound.</p>
 
 <h4><b>345 - Sequencing And Digital Audio (3)</b></h4>
-Study of music synthesis through MIDI sequencers, digital sound editing and recording, and the integration of digital audio and MIDI.
+<p>Study of music synthesis through MIDI sequencers, digital sound editing and recording, and the integration of digital audio and MIDI.</p>
 
 <h4><b>351 - Game Design I (3)</b></h4>
-This foundational game design class explores concepts and frameworks for understanding and designing for engagement, fun, and motivation in games.
+<p>This foundational game design class explores concepts and frameworks for understanding and designing for engagement, fun, and motivation in games.</p>
 
 <h4><b>354 - User Experience Design for Games (3)</b></h4>
-This course explores common trends concerning interface design in gaming for understanding how they influence a user s overall experience of a game.
+<p>This course explores common trends concerning interface design in gaming for understanding how they influence a user s overall experience of a game.</p>
 
 <h4><b>377 - Motion Graphics (3)</b></h4>
-Create motion graphics with compositing, animation, and visual effects (VFX) for broadcast, web, virtual and augmented reality, with focus on community engagement.
+<p>Create motion graphics with compositing, animation, and visual effects (VFX) for broadcast, web, virtual and augmented reality, with focus on community engagement.</p>
