--- a/assignment 3/assignment3.1.html
+++ b/assignment 3/assignment3.1.html
@@ -10,11 +10,11 @@
   <header> hey welcome to assignment 3 page</header>
   <nav> navigation </nav>
   <ul>
-    <li><a href="assignment 3.1.html">Main</a></li>
-    <li><a href="assignment 3.2.html">Requirements</a></li>
-    <li><a href="assignment 3.3.html">Classes</a></li>
+    <li><a href="assignment3.1.html">Main</a></li>
+    <li><a href="assignment3.2.html">Requirements</a></li>
+    <li><a href="assignment3.3.html">Classes</a></li>
   </ul>
-  <p>Here is some content <span class="spanstyle">with a span surrounding one section</span> of the content.</p>      
+  <p> Illinois State Univeristy is home of the  <span class="spanstyle"> redbirds</span>, most famously known as Reggie the Redbird.</p>      
   <div id="divexample">
     <h3>Here's a header</h3>
     <p>Here's a paragraph.</p>
