--- a/fancy.html
+++ b/fancy.html
@@ -1,14 +1,40 @@
 <!doctype html>
 <html>
 <head>
+ 
+  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+ 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css">
+  
+  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.umd.js"></script>
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.css" /> 
 <meta charset="UTF-8">
 <title>Fancy Example</title>
   <link rel="stylesheet" href="fancy.css">
+
 </head>
 
+
+
+
 <body>
+  
   <div id="wrapper">
     <h1>Fancy Example</h1>
+    <a data-fancybox="gallery" href="icecream.jpg"><img src="icecream_thumb.jpg"></a>
+<a data-fancybox="gallery" href="patch.jpg"><img src="patch_thumb.jpg"></a>
+<a data-fancybox="gallery" href="water.jpg"><img src="water_thumb.jpg"></a>
   </div>
+  <div id="myCarousel" class="f-carousel">
+  <div class="f-carousel__slide"><img src="patch.jpg"></div>
+  <div class="f-carousel__slide"><img src="icecream.jpg"></div>
+  <div class="f-carousel__slide"><img src="water.jpg"></div>
+</div>
+  <script>
+    const container = document.getElementById("myCarousel");
+    const options = { infinite: false };
+    new Carousel(container, options);
+</script>
 </body>
 </html>
