--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 
           <h3> Welcome! This is my portfolio. Feel free to look around and see my recent art works. I am currently a sophomore at Illinois State University studying creative technologies. I hope you enjoy! Below are some fun gifs I have made. </h3>
 <div class="gif">
-    <img alt src="cheerio.gif">    
-    <img alt src="car.gif">
+    <img alt="cheerios falling from the sky animated image" src="cheerio.gif">    
+    <img alt="car driving animated image" src="car.gif">
           
 </div>
