--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,8 @@
             </ul>
           </nav>
           <div class="instagram">
-          <p><a href="https://www.instagram.com/madisonjanicke/"><img src="pngtree-instagram-icon-png-image_6315974.png" style="width:200px;height:200px;border-radius: 50%;margin-left: 170px;"></a></p>
-          <p><a href="https://www.linkedin.com/in/madison-janicke-1813ba231/"><img src="download.png" style="width:200px;height:200px;border-radius: 50%; display: flex;margin-left: 300px;"></a></p>
+          <p><a href="https://www.instagram.com/madisonjanicke/"><img alt="instagram icon" src="pngtree-instagram-icon-png-image_6315974.png" style="width:200px;height:200px;border-radius: 50%;margin-left: 170px;"></a></p>
+          <p><a href="https://www.linkedin.com/in/madison-janicke-1813ba231/"><img alt="linked in logo" src="download.png" style="width:200px;height:200px;border-radius: 50%; display: flex;margin-left: 300px;"></a></p>
           </div>
 
           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfOvRIK-9oNOuZafCh491U7FKkucbKmhLpeSQwB6KmZTv6VMg/viewform?embedded=true" width="640" height="721" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
