--- a/mockup.html
+++ b/mockup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html> 
+<html lang="en">
     
   <head>
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.umd.js"></script>
